--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,53 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* Define color variables in the :root pseudo-class */
+:root {
+  --color-palette_1: #111111; /* Page background color */
+  --color-palette_2: #9B773D; /* Page background color */
+  --color-palette_3: #000000; /* Page background color */
+  --color-palette_4: #c49241; /* Page background color */
+
+
+  --color-btn_1: #1C1C1C; /* Page background color */
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+/* Constant btn styles */
+
+.BTN1 {
+  background-color: var(--color-btn_1);
+  border-radius: 15px;
+  border: solid var(--color-palette_2) 0px;
+  cursor: pointer;
+  color: #ffdca3;
+  transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.BTN1:hover {
+  background-color: var(--color-palette_4);
+  color: white;
+  transform: scale(1.1); /* Use a scale factor instead of fixed pixels */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.BTN1:active {
+  transform: scale(0.95); /* Slightly smaller to mimic a "pressed" effect */
+  transition: transform 0.05s ease; /* Quicker transition for responsiveness */
 }
 
-.card {
-  padding: 2em;
+
+.BTN2 {
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
-.read-the-docs {
-  color: #888;
+.BTN2:hover {
+  background-color: var(--color-palette_4);
+  color: white;
+  transform: scale(1.1); /* Use a scale factor instead of fixed pixels */
 }
+
+.BTN2:active {
+  transform: scale(0.95); /* Slightly smaller to mimic a "pressed" effect */
+  transition: transform 0.05s ease; /* Quicker transition for responsiveness */
+}
+
+
